# advent-of-code-2023

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
01/: solution.py  solution_part2.py
advent_of_code/day01/: part1.py  part2.py  test_day01.py
advent_of_code/day02/: README.md  part1.py  test_day02.py
advent_of_code/day03/: README.md  schematic.py  test_day03.py
advent_of_code/day04/: README.md  scratchcards.py  test_day04.py
advent_of_code/day05/: README.md  almanac.py  conftest.py  range_locator.py  seed_locator.py  test_almanac.py  test_day05.py  test_range_locator.py  test_seed_locator.py
day01/: part1.py
tests/: test_day02.py  test_solutions.py
