[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2023.10.3"
lark = "^1.1.8"
geopandas = "^0.14.1"
shapely = "^2.0.2"
more-itertools = "^10.1.0"
intervaltree = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
types-regex = "^2023.10.3.0"
ipython = "^8.18.1"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
